Enhanced Post Form by fixing flickering issues and added background color to share button

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,4 +96,10 @@
   }
 }
 
+@layer utilities {
+  .bg-buttonGradientTheme {
+    @apply bg-gradient-to-r from-theme-start to-theme-end;
+  }
+}
+
 
